--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,14 @@ test:
   override:
     - docker-compose up -d
     - docker-compose run dockerapp python test.py
+
+deployment:
+  hub:
+    branch: [circle_ci_publish, master]
+    commands:
+      - docker login -e $DOCKER_HUB_EMAIL -u $DOCKER_USER_ID -p $DOCKER_HUB_PWD
+      - docker tag dockerapp_dockerapp $DOCKER_HUB_ID/dockerapp:$CIRCLE_SHA1
+      - docker tag latest $DOCKER_HUB_ID/dockerapp:latest
+      - docker push $DOCKER_HUB_ID/dockerapp:$CIRCLE_SHA1
+      - docker push $DOCKER_HUB_ID/dockerapp:latest
+
