--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   pre:
     - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
+    - sudo pip install --upgrade pip
+    - sudo pip install docker-compose==1.12.0
   services:
     - docker
 
